--- a/app/views/collections/_form.html.erb
+++ b/app/views/collections/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@collection) do |f| %>
+<%= form_for(@collection, html: {multipart: true}) do |f| %>
   <% if @collection.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@collection.errors.count, "error") %> prohibited this collection from being saved:</h2>
@@ -32,6 +32,13 @@
     <%= f.label :notes %>
     <%= f.text_area :notes %>
   </div>
+  <p>
+  <% if @collection.document.exists? %>
+      <%= image_tag @collection.document.url %><br/>
+  <% end %>
+  <%= f.label :document, "Attach a New Document" %><br />
+  <%= f.file_field :document %>
+</p>
   <p>
     <%= f.label :tag_list %>
     <%= f.text_field :tag_list %>
