--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -37,10 +37,11 @@
   <% end %>
 </p>
 
-<div class="button-bar">
-  <ul class="button-group round">
-    <li><%= link_to ' Edit', edit_collection_path(@collection), :class => "fi-pencil icon-small small button secondary" %></li>
-    <li><%= link_to ' Collections', collections_path, :class => "fi-list icon-small small button secondary" %></li>
-  </ul>
-</div>
-
+<% if logged_in? %>
+  <div class="button-bar">
+    <ul class="button-group round">
+      <li><%= link_to ' Edit', edit_collection_path(@collection), :class => "fi-pencil icon-small small button secondary" %></li>
+      <li><%= link_to ' Collections', collections_path, :class => "fi-list icon-small small button secondary" %></li>
+    </ul>
+  </div>
+<% end %>
