--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,14 +1,6 @@
 <h1>Listing Collections</h1>
 
-<table>
-  <col width="auto">
-  <col width="auto">
-  <col width="auto">
-  <col width="auto">
-  <col width="auto">
-  <col width="auto">
-  <col width="auto">
-  <col width="220">
+<table id="example" class="display" cellspacing="0" width="100%">
   <thead>
     <tr>
       <th>Book</th>
@@ -19,10 +11,20 @@
       <th>Attachment</th>
       <th>Tags</th>
       <th>Action</th>
-      
     </tr>
   </thead>
-
+  <tfoot>
+      <tr>
+      <th>Book</th>
+      <th>Chapter</th>
+      <th>Article</th>
+      <th>Dissertation</th>
+      <th>Notes</th>
+      <th>Attachment</th>
+      <th>Tags</th>
+      <th>Action</th>
+    </tr>
+  </tfoot>
   <tbody>
     <% @collections.each do |collection| %>
       <tr>
@@ -66,4 +68,5 @@
 <% if logged_in? %>
 <%= link_to 'New Collection', new_collection_path, :class => "small button radius" %>
 <% end %>
+
 
